--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 services:
   lab1_ghidra:
     hostname: ${HOSTNAME}
+    security_opt:
+      - seccomp:unconfined
+    cap_add:
+      - SYS_PTRACE
     environment:
       - MAXMEM=4G
       - DISPLAY=$DISPLAY
